--- a/embed/Makefile
+++ b/embed/Makefile
@@ -2,6 +2,7 @@ SRC_DIR = ..
 DEMO_DIR = demos
 TEST_DIR = tests
 BUILD_DIR = build
+STANDALONE_DIR = standalone
 GEN_DIR = $(BUILD_DIR)/gen
 
 ################################################################################
@@ -12,6 +13,7 @@ LUA_SRCS = $(shell find $(SRC_DIR)/radio -type f -name "*.lua")
 
 DEMO_SRCS = $(DEMO_DIR)/fmradio.c $(DEMO_DIR)/rds-timesync.c
 TEST_SRCS = $(TEST_DIR)/test_api.c
+STANDALONE_SRCS = $(STANDALONE_DIR)/luaradio.c
 
 ################################################################################
 
@@ -22,6 +24,7 @@ LIB_OBJS := $(patsubst $(GEN_DIR)/%.c, $(BUILD_DIR)/%.o, $(LUA_C_SRCS)) $(patsub
 
 DEMO_BINS = $(patsubst $(DEMO_DIR)/%.c, $(BUILD_DIR)/$(DEMO_DIR)/%, $(DEMO_SRCS))
 TEST_BINS = $(patsubst $(TEST_DIR)/%.c, $(BUILD_DIR)/$(TEST_DIR)/%, $(TEST_SRCS))
+STANDALONE_BINS = $(patsubst $(STANDALONE_DIR)/%.c, $(BUILD_DIR)/$(STANDALONE_DIR)/%, $(STANDALONE_SRCS))
 
 ################################################################################
 
@@ -51,7 +54,7 @@ LUAJIT = luajit
 ################################################################################
 
 .PHONY: all
-all: lib
+all: lib tests demos standalone
 
 .PHONY: lib
 lib: $(SHARED_LIB) $(STATIC_LIB)
@@ -61,6 +64,9 @@ demos: $(SHARED_LIB) $(DEMO_BINS)
 
 .PHONY: tests
 tests: $(SHARED_LIB) $(TEST_BINS)
+
+.PHONY: standalone
+standalone: $(STANDALONE_BINS)
 
 .PHONY: runtests
 runtests: $(TEST_BINS)
@@ -74,9 +80,13 @@ clean:
 
 ################################################################################
 
+$(BUILD_DIR)/$(STANDALONE_DIR)/%: $(STANDALONE_DIR)/%.c $(SHARED_LIB)
+	@mkdir -p $(dir $@)
+	$(CC) $(CFLAGS) -I./ $< -o $@ -L$(BUILD_DIR) -l$(LIBNAME) $(LIBFLAGS) $(LDFLAGS) $(EXTRA_LDFLAGS)
+
 $(BUILD_DIR)/$(TEST_DIR)/%: $(TEST_DIR)/%.c $(SHARED_LIB)
 	@mkdir -p $(dir $@)
-	$(CC) $(CFLAGS) -I./ $< -o $@ -L$(BUILD_DIR) -l$(LIBNAME) $(LIBFLAGS) $(LDFLAGS) $(LDFLAGS_EXTRA)
+	$(CC) $(CFLAGS) -I./ $< -o $@ -L$(BUILD_DIR) -l$(LIBNAME) $(LIBFLAGS) $(LDFLAGS) $(EXTRA_LDFLAGS)
 
 $(BUILD_DIR)/$(DEMO_DIR)/%: $(DEMO_DIR)/%.c $(SHARED_LIB)
 	@mkdir -p $(dir $@)
