--- a/embed/Makefile
+++ b/embed/Makefile
@@ -1,5 +1,5 @@
 SRC_DIR = ..
-DEMO_DIR = demos
+EXAMPLE_DIR = examples
 TEST_DIR = tests
 BUILD_DIR = build
 GEN_DIR = $(BUILD_DIR)/gen
@@ -10,7 +10,7 @@ LIBNAME = luaradio
 LIB_SRCS = libluaradio.c
 LUA_SRCS = $(shell find $(SRC_DIR)/radio -type f -name "*.lua")
 
-DEMO_SRCS = $(DEMO_DIR)/fmradio.c $(DEMO_DIR)/rds-timesync.c
+EXAMPLE_SRCS = $(EXAMPLE_DIR)/fmradio.c $(EXAMPLE_DIR)/rds-timesync.c
 TEST_SRCS = $(TEST_DIR)/test_api.c
 
 ################################################################################
@@ -20,7 +20,7 @@ STATIC_LIB = $(BUILD_DIR)/lib$(LIBNAME).a
 LUA_C_SRCS := $(patsubst $(SRC_DIR)/%.lua, $(GEN_DIR)/%.c, $(LUA_SRCS))
 LIB_OBJS := $(patsubst $(GEN_DIR)/%.c, $(BUILD_DIR)/%.o, $(LUA_C_SRCS)) $(patsubst %.c, $(BUILD_DIR)/%.o, $(LIB_SRCS))
 
-DEMO_BINS = $(patsubst $(DEMO_DIR)/%.c, $(BUILD_DIR)/$(DEMO_DIR)/%, $(DEMO_SRCS))
+EXAMPLE_BINS = $(patsubst $(EXAMPLE_DIR)/%.c, $(BUILD_DIR)/$(EXAMPLE_DIR)/%, $(EXAMPLE_SRCS))
 TEST_BINS = $(patsubst $(TEST_DIR)/%.c, $(BUILD_DIR)/$(TEST_DIR)/%, $(TEST_SRCS))
 
 ################################################################################
@@ -56,13 +56,13 @@ LUAJIT = luajit
 ################################################################################
 
 .PHONY: all
-all: lib tests demos
+all: lib tests examples
 
 .PHONY: lib
 lib: $(SHARED_LIB) $(STATIC_LIB)
 
-.PHONY: demos
-demos: $(SHARED_LIB) $(DEMO_BINS)
+.PHONY: examples
+examples: $(SHARED_LIB) $(EXAMPLE_BINS)
 
 .PHONY: tests
 tests: $(SHARED_LIB) $(TEST_BINS)
@@ -83,7 +83,7 @@ $(BUILD_DIR)/$(TEST_DIR)/%: $(TEST_DIR)/%.c $(SHARED_LIB)
 	@mkdir -p $(dir $@)
 	$(CC) $(CFLAGS) -I./ $< -o $@ -L$(BUILD_DIR) -l$(LIBNAME) $(LIBFLAGS) $(LDFLAGS) $(EXTRA_LDFLAGS)
 
-$(BUILD_DIR)/$(DEMO_DIR)/%: $(DEMO_DIR)/%.c $(SHARED_LIB)
+$(BUILD_DIR)/$(EXAMPLE_DIR)/%: $(EXAMPLE_DIR)/%.c $(SHARED_LIB)
 	@mkdir -p $(dir $@)
 	$(CC) $(CFLAGS) -I./ $< -o $@ -L$(BUILD_DIR) -l$(LIBNAME) $(LIBFLAGS) $(LDFLAGS) $(EXTRA_LDFLAGS)
 
