embed: add force option to library symlink in Makefile
so build can be re-run without error.

--- a/embed/Makefile
+++ b/embed/Makefile
@@ -92,8 +92,8 @@ $(STATIC_LIB): $(LIB_OBJS)
 
 $(SHARED_LIB): $(LIB_OBJS)
 	$(CC) $(CFLAGS) -shared -Wl,-soname,lib$(LIBNAME).so.$(VERSION_MAJOR) -o $@.$(VERSION_MAJOR).$(VERSION_MINOR).$(VERSION_PATCH) $^ $(LDFLAGS)
-	ln -rs $@.$(VERSION_MAJOR).$(VERSION_MINOR).$(VERSION_PATCH) $@.$(VERSION_MAJOR)
-	ln -rs $@.$(VERSION_MAJOR).$(VERSION_MINOR).$(VERSION_PATCH) $@
+	ln -rsf $@.$(VERSION_MAJOR).$(VERSION_MINOR).$(VERSION_PATCH) $@.$(VERSION_MAJOR)
+	ln -rsf $@.$(VERSION_MAJOR).$(VERSION_MINOR).$(VERSION_PATCH) $@
 
 $(BUILD_DIR)/%.o: %.c
 	$(CC) $(CFLAGS) -c $< -o $@
