embed: add install target to Makefile

--- a/embed/Makefile
+++ b/embed/Makefile
@@ -23,6 +23,8 @@ LIB_OBJS := $(patsubst $(GEN_DIR)/%.c, $(BUILD_DIR)/%.o, $(LUA_C_SRCS)) $(patsub
 EXAMPLE_BINS = $(patsubst $(EXAMPLE_DIR)/%.c, $(BUILD_DIR)/$(EXAMPLE_DIR)/%, $(EXAMPLE_SRCS))
 TEST_BINS = $(patsubst $(TEST_DIR)/%.c, $(BUILD_DIR)/$(TEST_DIR)/%, $(TEST_SRCS))
 
+PREFIX ?= /usr
+
 ################################################################################
 
 OPT = -O3
@@ -72,6 +74,22 @@ runtests: $(TEST_BINS)
 	for f in $(TEST_BINS); do \
 		LD_LIBRARY_PATH=$(BUILD_DIR) ./$$f; \
 	done
+
+.PHONY: install
+install: $(STATIC_LIB) $(SHARED_LIB)
+	install -d $(DESTDIR)$(PREFIX)/lib
+	install -m755 $(STATIC_LIB) $(DESTDIR)$(PREFIX)/lib/lib$(LIBNAME).a
+	install -m755 $(SHARED_LIB) $(DESTDIR)$(PREFIX)/lib/lib$(LIBNAME).so.$(VERSION_MAJOR).$(VERSION_MINOR).$(VERSION_PATCH)
+	ln -rsf $(DESTDIR)$(PREFIX)/lib/lib$(LIBNAME).so.$(VERSION_MAJOR).$(VERSION_MINOR).$(VERSION_PATCH) $(DESTDIR)$(PREFIX)/lib/lib$(LIBNAME).so.$(VERSION_MAJOR)
+	ln -rsf $(DESTDIR)$(PREFIX)/lib/lib$(LIBNAME).so.$(VERSION_MAJOR).$(VERSION_MINOR).$(VERSION_PATCH) $(DESTDIR)$(PREFIX)/lib/lib$(LIBNAME).so
+	install -d $(DESTDIR)$(PREFIX)/include
+	install -m644 luaradio.h $(DESTDIR)$(PREFIX)/include/luaradio.h
+	install -d $(DESTDIR)$(PREFIX)/lib/lua/5.1
+	ln -rsf $(DESTDIR)$(PREFIX)/lib/lib$(LIBNAME).so.$(VERSION_MAJOR).$(VERSION_MINOR).$(VERSION_PATCH) $(DESTDIR)$(PREFIX)/lib/lua/5.1/radio.so
+	install -d $(DESTDIR)$(PREFIX)/bin
+	install -m755 ../luaradio $(DESTDIR)$(PREFIX)/bin/luaradio
+	install -d $(DESTDIR)$(PREFIX)/share/licenses/luaradio
+	install -m644 ../LICENSE $(DESTDIR)$(PREFIX)/share/licenses/luaradio/LICENSE
 
 .PHONY: clean
 clean:
