--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,9 @@ install:
     - sudo make install
     - cd ../
     - sudo apt-get install fftw3 fftw3-dev
-    - git clone --depth 1 git://github.com/jgaeddert/liquid-dsp.git
-    - cd liquid-dsp/
+    - git clone git://github.com/jgaeddert/liquid-dsp.git
+    - cd liquid-dsp
+    - git checkout be509781421f7330ab2ddcba2ded4c8de13c3bb2
     - sed -i 's/aclocal$/aclocal -I.\/scripts/' bootstrap.sh
     - ./bootstrap.sh
     - ./configure
