--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ install:
     - make
     - sudo make install
     - cd ../
-    - sudo apt-get install libboost-all-dev python-mako
+    - sudo apt-get install libboost-all-dev python3-mako
     - git clone https://github.com/gnuradio/volk.git
     - cd volk/
     - git checkout $VOLK_TAG
