--- a/website/_data/theme.yml
+++ b/website/_data/theme.yml
@@ -8,4 +8,5 @@ name: LuaRadio
 description: LuaRadio
 author: Vanya A. Sergeev
 github_url: https://github.com/vsergeev/luaradio
+mailing_list_url: https://groups.io/g/luaradio
 version: v0.7.0
