travis-ci: revert busted version to v2.0.0 to avoid isolation bug
likely related to lunarmodules/busted#643.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ env:
 
 install:
     - sudo apt-get install lua5.1 luarocks
-    - sudo luarocks install busted
+    - sudo luarocks install busted 2.0.0-1
     - git clone https://github.com/LuaJIT/LuaJIT.git
     - cd LuaJIT
     - git checkout $LUAJIT_TAG
